# SPDX-License-Identifier: GPL-2.0-or-later

load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
        "uapi/*.h",
    ]),
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/edgetpu:__subpackages__",
        "//private/google-modules/gpu:__subpackages__",
        "//private/google-modules/gxp:__subpackages__",
        "//private/google-modules/power/mitigation:__subpackages__",
        "//private/google-modules/radio:__subpackages__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
)

filegroup(
    name = "bcl.kconfig",
    srcs = ["Kconfig"],
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
)

config_setting(
    name = "radio_s5300",
    flag_values = {
        "radio": "s5300",
    },
)

config_setting(
    name = "radio_s5400",
    flag_values = {
        "radio": "s5400",
    },
)

string_flag(
    name = "radio",
    build_setting_default = "undefined",
)

kernel_module(
    name = "bcl",
    srcs = glob([
        "**/*.c",
        "**/*.h",
    ]) + [
        "//private/google-modules/bms:headers",
        "//private/google-modules/bms/misc:headers",
        "//private/google-modules/soc/gs:gs_soc_headers",
    ] + select({
        "//private/google-modules/power/mitigation:radio_s5300": ["//private/google-modules/radio/samsung/s5300:cpif_headers"],
        "//private/google-modules/power/mitigation:radio_s5400": ["//private/google-modules/radio/samsung/s5400:cpif_headers"],
        "//conditions:default": [],
    }),
    outs = [
        "google_bcl.ko",
    ],
    kernel_build = "//private/google-modules/soc/gs:gs_kernel_build",
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/edgetpu:__subpackages__",
        "//private/google-modules/gpu:__subpackages__",
        "//private/google-modules/gxp:__subpackages__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
    deps = [
        "//private/google-modules/bms",
        "//private/google-modules/bms/misc:bms-misc",
        "//private/google-modules/soc/gs:gs_soc_module",
    ] + select({
        "//private/google-modules/power/mitigation:radio_s5300": ["//private/google-modules/radio/samsung/s5300:cpif"],
        "//private/google-modules/power/mitigation:radio_s5400": ["//private/google-modules/radio/samsung/s5400:cpif"],
        "//conditions:default": [],
    }),
)
