# SPDX-License-Identifier: MIT

load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "gs_panel",
    srcs = glob([
        "*.h",
        "*.c",
    ]) + [
        "Kbuild",
        "//private/google-modules/display/common:headers",
    ],
    outs = [
        "gs-panel.ko",
    ],
    kernel_build = "//private/google-modules/soc/gs:gs_kernel_build",
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/display/common/panels:__subpackages__",
        "//private/google-modules/display/panels:__subpackages__",
        "//private/google-modules/touch:__subpackages__",
    ],
    deps = [
        "//private/google-modules/display/common/gs_drm",
        "//private/google-modules/display/samsung:display.samsung",
    ],
)
