load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

filegroup(
    name = "edgetpu.kconfig",
    srcs = [
        "Kconfig",
    ],
    visibility = [
        "//private/devices/google:__subpackages__",
    ],
)

kernel_module(
    name = "edgetpu.rio",
    srcs = glob([
        "**/*.c",
        "**/*.h",
    ]) + [
        "Kbuild",
        "Makefile",
        "gcip-kernel-driver/drivers/gcip/Makefile",
        "//private/google-modules/power/mitigation:headers",
        "//private/google-modules/soc/gs:gs_soc_headers",
    ],
    outs = [
        "rio.ko",
    ],
    kernel_build = "//private/google-modules/soc/gs:gs_kernel_build",
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/gxp/zuma:__pkg__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
    deps = [
        "//private/google-modules/power/mitigation:bcl",
        "//private/google-modules/soc/gs:gs_soc_module",
    ],
)
